--- a/client/app/views/map-listings.client.view.html
+++ b/client/app/views/map-listings.client.view.html
@@ -8,12 +8,11 @@
     https://angular-ui.github.io/angular-google-maps/#!/api/markers
     https://angular-ui.github.io/angular-google-maps/#!/api/windows
   -->
-<div id="map_canvas" ng-controller="ListingsController">
+
+<div id="map_canvas" ng-controller="ListingsController" ng-init="find()">
     <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options" bounds="map.bounds">
-        <ui-gmap-markers models="randomMarkers" coords="'self'" icon="'icon'" click="onClick">
-            <ui-gmap-windows show="show">
-                <div ng-non-bindable>{{title}}</div>
-            </ui-gmap-windows>
+        <ui-gmap-markers models="Listings" coords="'self'" icon="'icon'" click="onClick">
+            
         </ui-gmap-markers>
     </ui-gmap-google-map>
 </div>
