--- a/client/app/views/map-listings.client.view.html
+++ b/client/app/views/map-listings.client.view.html
@@ -12,7 +12,9 @@
 <div id="map_canvas" ng-controller="ListingsController" ng-init="find()">
     <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options" bounds="map.bounds">
         <ui-gmap-markers models="Listings" coords="'self'" icon="'icon'" click="onClick">
-            
+            <ui-gmap-windows show="show">
+                <div ng-non-bindable>{{name}}</div>
+            </ui-gmap-windows>
         </ui-gmap-markers>
     </ui-gmap-google-map>
 </div>
