added building code to the marker windows on the map

--- a/client/app/views/map-listings.client.view.html
+++ b/client/app/views/map-listings.client.view.html
@@ -13,7 +13,7 @@
     <ui-gmap-google-map center="map.center" zoom="map.zoom" draggable="true" options="options" bounds="map.bounds">
         <ui-gmap-markers models="Listings" coords="'self'" icon="'icon'" click="onClick">
             <ui-gmap-windows show="show">
-                <div ng-non-bindable>{{name}}</div>
+			<div ng-non-bindable>{{name}} </br>({{code}})</div>
             </ui-gmap-windows>
         </ui-gmap-markers>
     </ui-gmap-google-map>
